correction slider version mobile

--- a/css/marketing.css
+++ b/css/marketing.css
@@ -77,15 +77,7 @@
   margin-top: 1rem;
 }
 
-p{
-  max-width: 800px;     
-  margin: 0 auto;         
-  padding: 40px 20px;     
-  text-align: justify;    
-  color: white;          
-  font-size: 1.1rem;     
-  line-height: 1.6;      
-}
+  
 
 
 /* -------- Responsive Breakpoints -------- */
