--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ h2 {
 
 
 
-.article {
+.article-container{
     gap: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -57,16 +57,17 @@ h2 {
 }
 
 
-.article img {
+.article-card img {
     width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-.article div{
-   
-   
+.article-card{
+display: flex ;
+flex-direction: column;
+   gap: 35px;
     padding: 20px;
     max-width: 400px;
     background-color: rgba(0, 0, 0, 0.1);
@@ -260,7 +261,7 @@ p{
      font-size: 1.1rem;     
   line-height: 1.6; 
    margin: 0 auto;         
-  padding: 40px 20px;     
+    
   text-align: justify;    
   color: white;          
   font-size: 1.1rem;     
